<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wallet">

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.example.coincollector.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_coins"
        android:name="com.example.coincollector.ui.coins.CoinsFragment"
        android:label="@string/title_coins"
        tools:layout="@layout/fragment_coins" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.coincollector.ui.trending.TrendingFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_trending" />

    <fragment
        android:id="@+id/navigation_whishlist"
        android:name="com.example.coincollector.ui.profile.ProfileFragment"
        android:label="@string/title_whishlist"
        tools:layout="@layout/fragment_profile" />
</navigation>